<resources>
    <string name="app_name">Evomo</string>
    <string name="pass">Pass</string>
    <string name="defective">Defective</string>
    <string name="rework">Rework</string>
    <string name="input_username">Input Username</string>
    <string name="validasi_pass_8">Password must contain at least 8 characters</string>
    <string name="input_password">Input Password</string>
    <string name="email_err">Email is not valid!</string>
    <string name="button_text_signin">SIGN IN</string>
    <string name="modal_tnc_title">Terms and Condition</string>
    <string name="terms_and_conditions"><![CDATA[Selamat datang di Aplikasi OEE Mobile!\n\n        Mohon perhatikan bahwa Aplikasi kami memprioritaskan privasi dan keamanan data pribadi Anda. Kami sangat menghormati dan melindungi hak-hak Anda terkait informasi pribadi yang Anda bagikan dengan kami. Dalam upaya untuk menjelaskan bagaimana kami mengumpulkan, menggunakan, dan melindungi data pribadi Anda, kami telah menyusun syarat dan ketentuan perlindungan data pribadi yang rinci berikut ini:\n\n        1. Pengumpulan Data Pribadi:\n        Kami hanya akan mengumpulkan data pribadi yang diperlukan untuk tujuan tertentu yang relevan dengan layanan kami. Ini mungkin termasuk informasi seperti nama, alamat email, nomor telepon, alamat, dan informasi profil lainnya.\n\n        2. Penggunaan Data Pribadi:\n        Data pribadi Anda akan digunakan dengan tujuan yang jelas dan sah, seperti:\n        - Memproses transaksi dan permintaan yang Anda ajukan melalui Aplikasi.\n        - Menyediakan layanan dan menggunakan fitur yang Anda pilih.\n        - Mengirimkan informasi terkait pembaruan, penawaran, dan komunikasi penting terkait layanan kami.\n\n        3. Keamanan Data Pribadi:\n        Kami telah menerapkan langkah-langkah keamanan teknis dan organisasional yang kuat untuk melindungi data pribadi Anda dari akses, penggunaan, atau pengungkapan yang tidak sah. Kami berkomitmen untuk menjaga kerahasiaan informasi Anda.\n\n        4. Penyimpanan Data Pribadi:\n        Data pribadi Anda akan disimpan hanya selama diperlukan untuk tujuan yang ditetapkan dalam T&amp;C ini. Setelah data tidak diperlukan lagi, kami akan menghapusnya dengan aman sesuai dengan kebijakan penyimpanan kami.\n\n        5. Berbagi Data Pribadi:\n        Kami tidak akan menjual, menyewakan, atau membagikan data pribadi Anda kepada pihak ketiga tanpa izin Anda, kecuali diperlukan oleh hukum atau untuk tujuan yang telah dijelaskan dalam T&amp;C ini.\n\n        6. Kebijakan dan Perlindungan Hukum:\n        Sebagai Aplikasi [Nama Aplikasi], kami tunduk pada kebijakan perlindungan data pribadi yang berlaku sesuai dengan peraturan hukum yang berlaku di wilayah kami. Kebijakan-kebijakan ini termasuk, namun tidak terbatas pada:\n\n        - Kepatuhan Hukum: Kami mematuhi dan menjalankan semua aktivitas dan pengambilan keputusan sesuai dengan peraturan hukum yang berlaku di Negara Kesatuan Republik Indonesia (NKRI).\n        - Perlindungan Data Pribadi: Sejalan dengan Peraturan Menteri Komunikasi dan Informatika Nomor 27 Tahun 2022 Tentang Perlindungan Data Pribadi Dalam Sistem Elektronik, kami melindungi semua informasi yang diberikan oleh pengguna saat mendaftar, mengakses, dan menggunakan seluruh layanan Aplikasi [Nama Aplikasi].\n        - Pemberitahuan dan Persetujuan: Kami hanya akan memberikan atau menggunakan data dan informasi yang dimiliki oleh pengguna sesuai dengan peraturan hukum yang berlaku, termasuk dalam hal diwajibkan oleh institusi yang berwenang berdasarkan ketentuan hukum yang berlaku, perintah resmi dari pengadilan, dan/atau perintah resmi dari instansi atau aparat yang bersangkutan.\n\n        7. Hak Anda:\n        Anda memiliki hak untuk:\n        - Mengakses data pribadi Anda yang kami simpan.\n        - Memperbaiki atau memperbarui data pribadi yang tidak akurat.\n        - Menghapus data pribadi Anda dari basis data kami.\n\n        8. Persetujuan:\n        Dengan menekan tombol \"Setuju\" di bawah ini, Anda secara aktif memberikan izin kepada kami untuk mengumpulkan, menggunakan, dan menyimpan data pribadi Anda sesuai dengan syarat dan ketentuan yang tertera dalam dokumen ini. Jika Anda tidak setuju dengan syarat dan ketentuan ini, Anda dapat menutup pop-up ini dan tidak melanjutkan penggunaan Aplikasi.\n\n        9. Kontak Kami\n\n        Jika Anda memiliki pertanyaan tentang Kebijakan Privasi, silahkan hubungi kami di evomo.jeager@gmail.com\n\n        Kami ingin menegaskan bahwa kami tidak bertanggung jawab atas pertukaran data yang dilakukan oleh pengguna sendiri di antara mereka. Kami berupaya untuk menjaga semua informasi yang Anda berikan dengan aman dan merahasiakannya]]></string>
    <string name="btn_agree">Agree</string>
    <string name="modal_login_error_title">Login Failed</string>
    <string name="modal_login_error">Wrong username or password</string>
    <string name="btn_try_again">Try Again</string>

    <string name="counted_object">Counted Object: %s</string>
    <string name="title_home">Home</string>
    <string name="title_operator">Operator</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="date">Date</string>
    <string name="machine">Machine</string>
    <string name="product">Product</string>
    <string name="parameter">Parameter</string>
    <string name="speed">Speed</string>
    <string name="operator">Operator</string>
    <string name="title_acc_info">Account Info</string>
    <string name="title_email">Username</string>
    <string name="btn_logout">Logout</string>
    <string name="under_dev">Under Development</string>
    <string name="title_timeline">Timeline</string>
    <string name="timeline">Timeline</string>
    <string name="quality">Quality</string>
    <string name="performance">Performance</string>
    <string name="availability">Avaliability</string>
    <string name="dummy_zero_percentage">0 %</string>
    <string name="oee">OEE</string>
    <string name="dummy_zero">0</string>
    <string name="reject">Reject</string>
    <string name="good_quality">Good Quality</string>
    <string name="total_production">Total Production</string>
    <string name="run">RUN</string>
    <string name="status">Status</string>
    <string name="info">Information</string>
    <string name="title_runtime">Runtime</string>
    <string name="no_runtime">No Runtime Running</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_welcome">Welcome, %s</string>
    <string name="title_machine">Machine</string>
    <string name="total_count">Total Count</string>
    <string name="dummy_number">100000</string>
    <string name="in_out"><![CDATA[In & Out]]></string>
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="camera">Start New Count</string>
    <string name="choose_model">Choose Model</string>
    <string name="opencv">Camera</string>
    <string name="modal_logout_title">Warning</string>
    <string name="modal_logout_desc">Are you sure want to leave?</string>
    <string name="btn_cancel">Cancel</string>
</resources>