<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/modal_tnc_title"
        style="@style/InfoTitle"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="450dp">

            <TextView
                android:id="@+id/termsAndConditionsTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lineSpacingExtra="4dp"
                android:padding="16dp"
                android:text="@string/terms_and_conditions"
                android:textSize="16sp" />
        </ScrollView>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/agreeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/btn_agree"/>

</LinearLayout>