<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/defectiveCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Defective: 0"
            android:textSize="18sp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/reworkCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rework: 0"
            android:textSize="18sp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/counterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pass: 0"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/incrementButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/defectiveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/defective"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/reworkButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rework"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/sumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Sum: 0"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>

</LinearLayout>
